--- a/src/main.html
+++ b/src/main.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/landing.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="shortcut icon" href="img/icon.png" />
 </head>
 <body>
@@ -34,7 +34,7 @@
 </div>
 
 
-<script src="js/landing.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
