--- a/src/main.html
+++ b/src/main.html
@@ -58,7 +58,7 @@
 </div>-->
 
 <div class="container bootstrap snippets bootdey"> 
-  <p style=""> Previous Rooms </p>
+  <p style="color: black; text-align: center; font-weight: bold; font-size: 2em;"> Previous Rooms </p>
   <div id="meetings" class="row">
   </div>
 </div>
