added room name

--- a/src/call.html
+++ b/src/call.html
@@ -38,11 +38,12 @@
         <button id="usersCloseBtn" class="fas fa-times"></button>
       </header>
       <main>
+        <p style="font-size:2em; color:#9477CB; font-weight:bold;" id="meetingName"></p>
         <br />
         <button id="shareRoomBtn" class="fas fa-user-plus">Invite</button>
         <br />
         <div>
-          <label>Participants:&nbsp;</label><br />
+          <label>Participants (online):&nbsp;</label><br />
           <main id="participantsBox" class="participants-box">
             <div id="participantsList"></div>
           </main>
