--- a/src/chat.html
+++ b/src/chat.html
@@ -23,10 +23,11 @@
 
     <section id="users">
       <main>
+        <p style="font-size:2em; color:#9477CB; font-weight:bold;" id="meetingName"></p>
         <br />
-        <button id="shareRoomBtn" class="fas fa-user-plus">Invite</button>
-        <br />
-        <button id="leaveRoomBtn" class="fa fa-sign-out">Leave</button>
+        <button id="shareRoomBtn" class="fas fa-user-plus"></button>
+        <button id="joinCallBtn" class="fa fa-phone"></button>
+        <button id="leaveRoomBtn" class="fa fa-sign-out"></button>
         <br />
         <div>
           <label>Participants (online):&nbsp;</label><br />
