--- a/src/main.html
+++ b/src/main.html
@@ -27,7 +27,7 @@
       <ul class="nav navbar-nav" id="username"> 
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a type="button" href="" id="logout_button"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        <li><a type="button" href="" id="logoutBtn"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
       </ul>
     </div>
   </div>
