--- a/src/start.html
+++ b/src/start.html
@@ -35,14 +35,14 @@
         <h2>LOGIN</h2>
         <input id="login_email" type="text" placeholder="Email">
         <input id="login_password" type="password" placeholder="Password">
-        <input id="login_button" type="button" value="Login">
+        <input id="loginBtn" type="button" value="Login">
       </div>
       <div class="register-show">
         <h2>REGISTER</h2>
         <input id="signup_email" type="text" placeholder="Email">
         <input id="signup_username" type="text" placeholder="Username">
         <input id="signup_password" type="password" placeholder="Password">
-        <input id="signup_button" type="button" value="Register">
+        <input id="signupBtn" type="button" value="Register">
       </div>
     </div>
   </div>
