--- a/src/main.html
+++ b/src/main.html
@@ -47,7 +47,7 @@
 </div>
 
 <div class="container bootstrap snippets bootdey"> 
-  <p style="color: black; text-align: center; font-weight: bold; font-size: 2em;"> Your Rooms </p>
+  <p style="color: black; text-align: center; font-weight: bold; font-size: 2em;"> My Rooms </p>
   <div id="meetingsDiv" class="row">
   </div>
 </div>
