--- a/src/start.html
+++ b/src/start.html
@@ -45,8 +45,9 @@
         <input id="signupBtn" type="button" value="Register">
       </div>
     </div>
-  </div>
+</div>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16"></script>
 <script src="js/start.js"></script>
 
 </body>
