--- a/src/call.html
+++ b/src/call.html
@@ -44,7 +44,7 @@
         <button id="shareRoomBtn" class="fas fa-user-plus">Invite</button>
         <br />
         <div>
-          <label>Participants (online):&nbsp;</label><br />
+          <p style="color:white; font-size:1em; font-weight:bold;">Participants <small>(online in both chat and call of this room) :</small></p><br />
           <main id="participantsBox" class="participants-box">
             <div id="participantsList"></div>
           </main>
