--- a/src/chat.html
+++ b/src/chat.html
@@ -31,7 +31,7 @@
         <button id="leaveRoomBtn" class="fa fa-sign-out"></button>
         <br />
         <div>
-          <label>Participants (online):&nbsp;</label><br />
+          <p style="color:white; font-size:1em; font-weight:bold;">Participants <small>(online in both chat and call of this room) :</small></p><br />
           <main id="participantsBox" class="participants-box">
             <div id="participantsList"></div>
           </main>
